--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -1,4 +1,35 @@
 {
+  "NLog": {
+    "throwConfigExceptions": true,
+    "targets": {
+      "async": true,
+      "logfile": {
+        "type": "File",
+        "fileName": "${configsetting:item=SystemConfiguration.LogLocation}/${longdate:cached=true}-${configsetting:item=SystemConfiguration.LogSuffix}.log",
+        "layout": "${longdate} ${uppercase:${level}} ${message} ${exception:format=ToString}",
+        "archiveFileName": "${basedir}/logs/archives/${shortdate}.{#}.log",
+        "archiveAboveSize": 5242880,
+        "archiveEvery": "Day",
+        "archiveNumbering": "Rolling",
+        "maxArchiveFiles": 20
+      },
+      "logconsole": {
+        "type": "Console"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "logconsole"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logfile"
+      }
+    ]
+  },
   "SystemConfiguration": {
     "ApplicationName": "CPN",
     "Browser": "chrome",
