--- a/UI.NUnitVersion/UI.NUnitVersion.csproj
+++ b/UI.NUnitVersion/UI.NUnitVersion.csproj
@@ -28,4 +28,13 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Include="TestData\GoodWorkHours.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="TestData\GoodNonAvailabilityHours.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
