--- a/azure-pipelines.sds.nightly.yml
+++ b/azure-pipelines.sds.nightly.yml
@@ -100,6 +100,7 @@ stages:
                 inputs:
                   testResultsFiles: "**/*TestResults.trx"
                   testRunTitle: "UI Tests ${{ parameters.environment }}"
+                  failTaskOnFailedTests: true
 
               # - task: PublishBuildArtifacts@1
               #   displayName: Publish Test Results Output
