--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -3,8 +3,8 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: "0 0 * * *"
-    displayName: Daily midnight build
+  - cron: "0 8 * * *"
+    displayName: Daily build
     always: true
     branches:
       include:
